GH-7: provided authorization code exchange for Keycloak; separated layer for client related data